@@ -9,7 +9,7 @@
                            bill@newbreedsoftware.com
                    http://www.newbreedsoftware.com/tuxpaint/
 
-                               September 10, 2006
+                               September 22, 2006
 
    --------------------------------------------------------------------------
 
@@ -467,6 +467,8 @@ Windows Users
                |--------------------+---------------------+---------------|
                |ukrainian           |                     |               |
                |--------------------+---------------------+---------------|
+               |venda               |                     |               |
+               |--------------------+---------------------+---------------|
                |vietnamese          |                     |               |
                |--------------------+---------------------+---------------|
                |walloon             |walon                |               |
@@ -760,6 +762,8 @@ Available Languages
        |tr_TR          |                     |Turkish              |
        |---------------+---------------------+---------------------|
        |uk_UA          |                     |Ukrainian            |
+       |---------------+---------------------+---------------------|
+       |ve_ZA          |                     |Venda                |
        |---------------+---------------------+---------------------|
        |vi_VN          |                     |Vietnamese           |
        |---------------+---------------------+---------------------|
