@@ -22,7 +22,7 @@ New Breed Software</p>
 <p><a href="mailto:bill@newbreedsoftware.com">bill@newbreedsoftware.com</a><br>
 <a href="http://www.newbreedsoftware.com/tuxpaint/">http://www.newbreedsoftware.com/tuxpaint/</a></p>
 
-<p>September 10, 2006</p>
+<p>September 22, 2006</p>
 </center>
 
 <hr size=2 noshade>
@@ -727,6 +727,11 @@ New Breed Software</p>
       <td>&nbsp;</td>
     </tr>
     <tr>
+      <td><code>venda</code></td>
+      <td>&nbsp;</td>
+      <td>&nbsp;</td>
+    </tr>
+    <tr>
       <td><code>vietnamese</code></td>
       <td>&nbsp;</td>
       <td>&nbsp;</td>
@@ -1257,6 +1262,11 @@ New Breed Software</p>
     <td><code>uk_UA</code></td>
     <td>&nbsp;</td>
     <td>Ukrainian</td>
+  </tr>
+  <tr>
+    <td><code>ve_ZA</code></td>
+    <td>&nbsp;</td>
+    <td>Venda</td>
   </tr>
   <tr>
     <td><code>vi_VN</code></td>
