@@ -1,5 +1,5 @@
-.\" tuxpaint.1 - 2006.09.09
-.TH TUXPAINT 1 "9 Sept 2006" "0.9.16" "Tux Paint"
+.\" tuxpaint.1 - 2006.09.22
+.TH TUXPAINT 1 "22 Sept 2006" "0.9.16" "Tux Paint"
 .SH NAME
 tuxpaint -- A drawing program for young children.
 
@@ -467,6 +467,9 @@ turkish
 ukranian
 .TP 2
 -
+venda
+.TP 2
+-
 vietnamese
 .TP 2
 -
@@ -641,6 +644,7 @@ Marco Milanesi,
 Kartik Mistry,
 Mugunth,
 Steve Murphy,
+Shumani Mercy Nehulaudzi,
 Daniel Nylander,
 Gareth Owen,
 Flavio Pastor,
